2005-08-16  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/main.c: Uncluttered by removing nitpicky (void) casts.
	(longusage): Reworked for source legibility even on 80-column
	displays.
	(main): If in verbose linemode, print number of references found,
	first off.  Patch from Elad Lahav, for Kscope

2005-07-08  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/build.c (invname_buf, invpost_buf, reffile_buf): Make
	modifiable copies of the default file names.
	(invname, invpost, reffile): Initialize pointers to modifiable
	copies, rather than to string literals.

	* packages/MSDOS/djmake.bat: Adapt to modern position of ylwrap
	script.

	* src/command.c (command) [KEY_RESIZE]: Protect by
	!defined(__DJGPP__).  That platform doesn't have sigaction() and
	associated machinery, nor does it really support terminal size
	changes to begin with.

	* src/main.c (sigwinch_handler): Likewise.
	(main): Likewise.

2005-04-29  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/command.c (command): Additional hotkey mapping of Ctrl-A to
	same function as Ctrl-Y, like AT&T cscope, to evade Ctrl-Y
	occupied as the DSUSP signal key on BSD'ish platforms.

	* src/help.c (help): Document additonal hotkey ^A.  Mention
	possible unavailability of some Ctrl keys because of terminal
	settings.

2005-03-14  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/input.c (getline): Removed.  Was just a minimally simplified
	copy of mygetline() anyway, and it threatened to collide with a
	like-named routine in libc.
	
	* src/global.h (getline): Removed prototype.

 	* src/command.c (command): Changed all calls of getline() to
	mygetline() with an empty string as the first argument.

	* src/egrep.y (memset): Changed #if condition around fallback
	implementation to match that of the prototype in global.h.  Should
	fix SF bug #1163104 (build failure on FreeBSD).

2005-02-16  Neil Horman  <nhorman@gmail.com>
